--- a/index.html
+++ b/index.html
@@ -136,42 +136,6 @@
         background: #feb47b;
       }
 
-      /* Логин */
-      .login-container {
-        background-color: rgba(0, 0, 0, 0.8);
-        padding: 20px;
-        border-radius: 10px;
-        margin-top: 30px;
-        width: 300px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .login-container input {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: none;
-        border-radius: 5px;
-        background: #333;
-        color: white;
-      }
-
-      .login-container button {
-        background: #ff7e5f;
-        color: white;
-        padding: 10px;
-        width: 100%;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1.1em;
-      }
-
-      .login-container button:hover {
-        background: #feb47b;
-      }
-
       /* Тарифы */
       .pricing {
         padding: 50px 0;
@@ -258,7 +222,6 @@
       <div class="navbar__logo">LukianHack</div>
       <ul class="navbar__menu">
         <li><a href="#register" class="navbar__links">Регистрация</a></li>
-        <li><a href="#login" class="navbar__links">Логин</a></li>
         <li><a href="#features" class="navbar__links">Особенности</a></li>
         <li><a href="#pricing" class="navbar__links">Тарифы</a></li>
         <li><a href="#contact" class="navbar__links">Контакты</a></li>
@@ -287,31 +250,32 @@
       </form>
     </div>
 
-    <!-- Форма логина -->
-    <div class="login-container" id="login">
-      <h2>Логин</h2>
-      <form id="loginForm" onsubmit="return loginUser(event)">
-        <input type="email" id="loginEmail" placeholder="Электронная почта" required />
-        <input type="password" id="loginPassword" placeholder="Пароль" required />
-        <button type="submit">Войти</button>
-      </form>
-    </div>
-
     <!-- Тарифы -->
     <div class="pricing" id="pricing">
       <h1>Тарифы</h1>
       <div class="price-card">
         <h2>Бесплатно</h2>
         <p>Доступ к основным функциям</p>
-        <div class="price">£0</div>
+        <div class="price">0₽</div>
         <a href="#" class="btn">Выбрать</a>
       </div>
       <div class="price-card">
-        <h2>Стандарт</h2>
-        <p>Доступ ко всем базовым функциям</p>
-        <div class="price">£10</div>
+        <h2>Премиум</h2>
+        <p>Все функции и приоритетная поддержка</p>
+        <div class="price">5£</div>
         <a href="#" class="btn">Выбрать</a>
       </div>
-      <div class="price-card">
-        <h2>Профессионал</h2>
-       
+    </div>
+
+    <!-- Админ Панель -->
+    <div id="admin-panel" class="modal">
+      <div class="modal-content">
+        <h2>Введите секретный код для доступа</h2>
+        <input type="text" id="admin-code" placeholder="Секретный код" />
+        <button onclick="checkAdminCode()">Подтвердить</button>
+      </div>
+    </div>
+
+    <script>
+      async function registerUser(event) {
+        event.preventDefault(); // Предотвращ
