--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <div class="price-card">
         <h2>Бесплатно</h2>
         <p>Доступ к основным функциям</p>
-        <div class="price">0₽</div>
+        <div class="price">0£</div>
         <a href="#" class="btn">Выбрать</a>
       </div>
       <div class="price-card">
