--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <li><a href="#features" class="navbar__links">Особенности</a></li>
         <li><a href="#pricing" class="navbar__links">Тарифы</a></li>
         <li><a href="#contact" class="navbar__links">Контакты</a></li>
-        <li><a href="#admin-panel" class="navbar__links">Админ Панель</a></li>
+        <li><a href="admin.html" class="navbar__links">Админ Панель</a></li>
       </ul>
     </nav>
 
@@ -267,15 +267,22 @@
       </div>
     </div>
 
-    <!-- Админ Панель -->
-    <div id="admin-panel" class="modal">
-      <div class="modal-content">
-        <h2>Введите секретный код для доступа</h2>
-        <input type="text" id="admin-code" placeholder="Секретный код" />
-        <button onclick="checkAdminCode()">Подтвердить</button>
-      </div>
-    </div>
-
     <script>
       async function registerUser(event) {
-        event.preventDefault(); // Предотвращ
+        event.preventDefault(); // Предотвращаем отправку формы
+        const username = document.getElementById('username').value;
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
+
+        if (password !== confirmPassword) {
+          alert('Пароли не совпадают!');
+          return;
+        }
+
+        // Обработка регистрации (например, отправка на сервер)
+        alert('Регистрация прошла успешно!');
+      }
+    </script>
+  </body>
+</html>
